// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`recipe: Form input > emits the expected shortcut tuples 1`] = `
[
  [
    "form-input",
    "block w-full rounded-md border bg-white px-3 py-2 text-base shadow-sm placeholder:text-gray-400 focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:bg-gray-50 disabled:text-gray-500 disabled:cursor-not-allowed",
  ],
  [
    "form-input-state-default",
    "border-gray-300 focus:border-blue-500 focus:ring-blue-500",
  ],
  [
    "form-input-state-error",
    "border-red-500 text-red-700 placeholder:text-red-300 focus:border-red-500 focus:ring-red-500 invalid:border-red-500",
  ],
  [
    "form-input-state-success",
    "border-emerald-500 focus:border-emerald-500 focus:ring-emerald-500",
  ],
  [
    "form-input-s-sm",
    "px-2 py-1 text-sm",
  ],
  [
    "form-input-s-md",
    "px-3 py-2 text-base",
  ],
  [
    "form-input-s-lg",
    "px-4 py-3 text-lg",
  ],
  [
    "form-input-readonly",
    "read-only:bg-gray-50 read-only:cursor-default",
  ],
]
`;

exports[`recipe: Form input > exposes every expected class name in the manifest 1`] = `
[
  "form-input",
  "form-input-state-default",
  "form-input-state-error",
  "form-input-state-success",
  "form-input-s-sm",
  "form-input-s-md",
  "form-input-s-lg",
  "form-input-readonly",
]
`;
